@@ -12,6 +12,7 @@ gecos_name = CALLER_NAME
 # ----- Main settings -----
 
 queue_run_in_order
+log_selector = +outgoing_port
 
 
 # ----- Routers -----
