@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.476 2007/02/07 14:41:13 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.477 2007/02/08 15:16:19 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -96,6 +96,10 @@ PH/22 Applied Jori Hamalainen's speed-up changes and typo fixes to exigrep,
 
 PH/23 Applied sieve patches from the maintainer "tracking the latest notify
       draft, changing the syntax and factoring some duplicate code".
+
+PH/24 When the log selector "outgoing_port" was set, the port was shown as -1
+      for deliveries of the second and subsequent messages over the same SMTP
+      connection.
 
 
 Exim version 4.66
